# auth-plus-billing

./: .dockerignore  .env  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  default.nix  docker-compose.yml  flake.nix  shell.nix  sonar-project.properties
.github/workflows/: continuous_delivery.yml  continuous_integration copy.yml  continuous_integration.yml
.sqlx/: query-0fb7b5ec6d49b268a5f15ab8fa5fabee2e4b1a0d9b69cb95fcdff2377e68e0d0.json  query-eda7d21740963a7d621a3ed55796d53fd8fef99eee4eed0c562583b9dfa2e694.json
db/migrations/: 20221026224340_create-tables-init.sql  20221111211314_create-gateway.sql  20230118010003_update-tables-timestamp.sql  20230118010003_update_tables_timestamp.sql  20230120160437_create_gateway.sql  20230120160437_update-gateway.sql  20260126231952_create-index.sql  20260202185104_alter-invoice.sql
src/: lib.rs
src/config/: cache.rs  database.rs  env_var.rs  kafka.rs  mod.rs  prometheus.rs  zipkin.rs
src/core/: mod.rs
src/core/dto/: charge.rs  gateway.rs  gateway_integration.rs  invoice.rs  invoice_item.rs  mod.rs  payment_method.rs  user.rs
src/core/gateway/: mod.rs  stripe.rs  stripe_models.rs
src/core/repository/: charge_repository.rs  gateway_integration_repository.rs  gateway_repository.rs  helpers.rs  invoice_item_repository.rs  invoice_repository.rs  mod.rs  orm.rs  payment_method_repository.rs  user_repository.rs
src/core/usecase/: invoice_usecase.rs  mod.rs
src/core/usecase/charge/: charge_create_usecase.rs  mod.rs
src/core/usecase/driven/: creating_charge.rs  creating_gateway_integration.rs  creating_invoice.rs  creating_invoice_item.rs  creating_payment_method.rs  creating_user.rs  gateway.rs  mod.rs  reading_gateway.rs  reading_invoice.rs  reading_invoice_item.rs  reading_payment_method.rs  reading_user.rs  updating_gateway_integration.rs  updating_invoice.rs
src/core/usecase/invoice/: invoice_create_usecase.rs  invoice_insert_item_usecase.rs  invoice_list_usecase.rs  invoice_update_usecase.rs  mod.rs
src/core/usecase/payment_method/: mod.rs  payment_method_create_usecase.rs
src/core/usecase/user/: mod.rs  user_create_usecase.rs
src/presentation/: mod.rs
src/presentation/cronjob/: mod.rs
src/presentation/cronjob/commands/: mod.rs  retry_charging_invoices.rs
src/presentation/http/: mod.rs
src/presentation/http/middlewares/: trace.rs
src/presentation/http/routes/: charge.rs  invoice.rs  mod.rs  payment_method.rs  user.rs
src/presentation/kafka/: case.rs  mod.rs
tests/: charge_create.rs  invoce.rs  invoice_create.rs  invoice_list.rs  invoice_update.rs  payment_method_create.rs  user_create.rs
