[package]
name = "auth-plus-billing"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Hanasiro <andrewkhanasiro@gmail.com>"]
description = "A billing system"
repository = "https://github.com/auth-plus/auth-plus-billing"
readme = "README.md"
license = "MIT"
default-run = "http"

[[bin]]
name = "http"
test = false
bench = false

[[bin]]
name = "kafka"
test = false
bench = false

[[bin]]
name = "cronjob"
test = false
bench = false

[dependencies]
actix-cors = "0.7.0"
actix-service = "2.0.2"
actix-web = "4.9.0"
async-trait = "0.1.87"
clap = { version = "4.5.31", features = ["derive"] }
futures-util = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.26"
mockall = "0.13.1"
opentelemetry = "0.28.0"
opentelemetry-zipkin = "0.28.0"
prometheus = { version = "0.13.4", features = ["process"] }
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "json",
    "time",
] }
sqlx-core = "0.8.3"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.15.1", features = ["v4", "serde"] }
tracing-opentelemetry = "0.29.0"
tracing-actix-web = { version = "0.7.16", features = ["opentelemetry_0_18"] }
actix-rt = "2.10"
fake = "4.0.0"
time = { version = "0.3.37", features = ["macros"] }
opentelemetry_sdk = "0.28.0"

[dev-dependencies]
actix-rt = "2.10"
fake = { version = "4.0.0", features = ['uuid'] }
