[package]
name = "auth-plus-billing"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Hanasiro <andrewkhanasiro@gmail.com>"]
description = "A billing system"
repository = "https://github.com/auth-plus/auth-plus-billing"
readme = "README.md"
license = "MIT"
default-run = "http"

[[bin]]
name = "http"
test = false
bench = false

[[bin]]
name = "kafka"
test = false
bench = false

[[bin]]
name = "cronjob"
test = false
bench = false

[dependencies]
actix-cors = "0.7.1"
actix-service = "2.0.3"
actix-web = "4.12.1"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
lazy_static = "1.5.0"
log = "0.4.29"
mockall = "0.14.0"
opentelemetry = "0.31.0"
opentelemetry-zipkin = "0.31.0"
prometheus = { version = "0.14.0", features = ["process"] }
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
rust_decimal = "1.39.0"
rust_decimal_macros = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "json",
    "time",
] }
sqlx-core = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
tracing-opentelemetry = "0.32.0"
tracing-actix-web = { version = "0.7.20", features = ["opentelemetry_0_18"] }
actix-rt = "2.11"
fake = "4.4.0"
time = { version = "0.3.44", features = ["macros"] }
opentelemetry_sdk = "0.31.0"

[dev-dependencies]
actix-rt = "2.10"
fake = { version = "4.0.0", features = ['uuid'] }
