[package]
name = "auth-plus-billing"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Hanasiro <andrewkhanasiro@gmail.com>"]
description = "A billing system"
repository = "https://github.com/auth-plus/auth-plus-billing"
readme = "README.md"
license = "MIT"
default-run = "http"

[[bin]]
name = "http"
test = false
bench = false

[[bin]]
name = "kafka"
test = false
bench = false

[[bin]]
name = "cronjob"
test = false
bench = false

[dependencies]
actix-cors = "0.7.1"
actix-service = "2.0.3"
actix-web = "4.13.0"
async-trait = "0.1.89"
clap = { version = "4.6.0", features = ["derive"] }
futures-util = "0.3.32"
lazy_static = "1.5.0"
log = "0.4.29"
mockall = "0.14.0"
opentelemetry = "0.31.0"
opentelemetry-zipkin = "0.31.0"
prometheus = { version = "0.14.0", features = ["process"] }
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
rust_decimal = { version = "1.41.0", features = ["db-postgres"] }
rust_decimal_macros = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "json",
    "time",
    "macros",
    "rust_decimal",
] }
sqlx-core = "0.8.6"
tokio = { version = "1.52.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
tracing-opentelemetry = "0.32.1"
tracing-actix-web = { version = "0.7.20", features = ["opentelemetry_0_18"] }
actix-rt = "2.11"
fake = "5.1.0"
time = { version = "0.3.47", features = ["macros"] }
opentelemetry_sdk = "0.31.0"
reqwest = { version = "0.13.2", features = ["json"] }
anyhow = "1.0.102"
httpmock = "0.8.3"
redis = { version = "1.2.0", features = [] }

[dev-dependencies]
actix-rt = "2.10"
fake = { version = "5.1.0", features = ['uuid'] }
